--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="logo.PNG">
     <title>Document</title>
 </head>
 
@@ -33,10 +34,10 @@
                                 <a class="nav-link active head_active" aria-current="page" href="index.html">Bosh sahifa</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Biz haqimizda</a>
+                                <a class="nav-link active" aria-current="page" href="login.html">Biz haqimizda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Biz bilan bog’laning</a>
+                                <a class="nav-link active" aria-current="page" href="register.html">Biz bilan bog’laning</a>
                             </li>
                     </div>
                     <nav class="navbar navbar-expand-lg navbar-light ">
