--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="style.css">
 
         <link rel="icon" href="logo.PNG">
-    <title>Document</title>
+    <title>Bosh sahifa</title>
 
     <title>Bosh sahifa</title>
 </head>
